test/testdata/list/pop_empty_error.lox
[].pop(); // error: pop from empty 'list'
